# fieldsense

./: .env.example  .gitattributes  .gitignore  .vercelignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  environment.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
api/: index.py
app/: __version__.py  api_routes.py  app.py  config.py  database.py  errors.py  factory.py  leaf_inference.py  ml_compat.py  ml_ops.py  stored_model.pkl  stored_model_fr.pkl
app/leaf_models/: model.onnx  model.pth
app/services/: __init__.py  alerts.py  intelligence.py
app/static/css/: minimal.css
app/static/js/: fs-prediction-result.js
app/templates/: minimal_base.html  minimal_history.html  minimal_home.html  model1.html  model2.html  model3.html
data/: README.md
data/raw/: filtered_data.csv
docs/: ROADMAP.md  TRUST_AND_SAFETY.md  data_card.md  engine_design.md  methodology.md  model_card_crop.md  model_card_fertilizer.md  reproducibility.md
docs/figures/: ARCHITECTURE.md
docs/screenshots/: README.md
experiments/: ablation_engine_weights.py  evaluate_crop.py  evaluate_fertilizer.py  train_crop.py  train_fertilizer.py
notebooks/: 01_crop_recommendation_baseline.ipynb  02_fertilizer_recommendation_baseline.ipynb  03_fertilizer_analysis.ipynb  README.md
notebooks/archive/: legacy_exploration.ipynb
results/: README.md
results/metrics/: README.md
scripts/: export_leaf_onnx.py
src/fieldsense/: __init__.py  config.py
tests/: conftest.py  test_app.py  test_engine_core.py
(+17 files in other folders)
